--- a/blog/my_blog/templates/xiugai_user.html
+++ b/blog/my_blog/templates/xiugai_user.html
@@ -58,14 +58,13 @@
  						  </button>
  						  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
  							<div class="navbar-nav">
-                                <a class="nav-item nav-link active" href="{% url 'core_1:index'%}"><button type="button" class="btn btn-danger" style="margin-left: 50px; width: 100px;">首页</button></a>
+							<a class="nav-item nav-link active" href="{% url 'core_1:index'%}"><button type="button" class="btn btn-danger" style="margin-left: 50px; width: 100px;">首页</button></a>
 
 							  {% for i in sorts%}
 								<a class="nav-item nav-link" href="#"><button type="button" class="btn btn-danger"style="margin-left: 50px; width: 100px;">{{i.sort_name}}</button></a>
 								{%empty%}
 								没有分类
 								{%endfor%}
-
 
  							  <a class="nav-item nav-link" href="{% url 'my_blog:my_blog' %}"><button type="button" class="btn btn-danger"style="margin-left: 50px; width: 100px;">我的</button></a>
 							  	<a href=""><h3 style="display: block;margin-left: 50px;">{{request.user.user_file.nickname}}</h3></a>
@@ -79,32 +78,19 @@
 	<div>
 		<div class="fabu" style="width: 61.8%;margin: 100px auto;">
 			
-			<form action="{% url 'my_blog:send_blog' %}"method="post" enctype="multipart/form-data" >
+			<form action="{% url 'my_blog:xiugai_user' %}"method="post" enctype="multipart/form-data" >
 				<ul>
-					
-					
-					
-					<li><textarea rows="20" cols="100" name="text">
-						发布文章写在此处
+					<li class="right_left" >年龄<input type="text" name="age" style="display: block;width: 20%;border: 1px #CED4DA solid;" 	value="{{user_f.age}}" /></li>
+					<li class="right_left" >性别<input type="text" name="gender" style="display: block;width: 20%;border: 1px #CED4DA solid;"	value="{{user_f.gender}}" /></li>
+					<li class="right_left" >电话<input type="text" name="pthone" style="display: block;width: 20%;border: 1px #CED4DA solid;"	value="{{user_f.pthone}}" /></li>
+					<li class="right_left" >昵称<input type="text" name="nickname" style="display: block;width: 20%;border: 1px #CED4DA solid;"	value="{{user_f.nickname}}" /> {{ero}}</li>
+					<li class="right_left" >爱好<input type="text" name="hobby_user" style="display: block;width: 20%;border: 1px #CED4DA solid;"	value="{{user_f.hobby_user}}" /></li>
+					<li class="right_left" >专业<input type="text" name="speciality" style="display: block;width: 20%;border: 1px #CED4DA solid;" value="{{user_f.speciality}}" /></li>
+
+					<li><textarea rows="20" cols="100" name="Personal_quotes">
+						{{user_f.Personal_quotes}}
 					</textarea></li>
-					<li class="right_left">类型
-						<div class="input-group mb-3" style="width: 20%;">
-						 
-							
-						 
-						  <select class="custom-select" id="inputGroupSelect01" name="type">
-							{% for i in sorts%}
-								<option value="{{i.sort_name}}">{{i.sort_name}}</option>
-								{%empty%}
-								没有分类
-								{%endfor%}
-
-
-
-						  </select>
-						</div>
-					</li><li class="right_left" >博文名称<input type="text" name="textname" style="display: block;width: 20%;border: 1px #CED4DA solid;"/></li>
-					<li><input type="file" id='image_di' name="where" ></li>
+					<li><input type="file" id='user_img' name="where" ></li>
 					<li><input type="submit" id="fa_bu" name=""  class="btn btn-secondary" value="发布" style="background-color: #F75C5C;"/> <a href="{% url 'my_blog:my_blog'%}" class="btn btn-secondary" style="background-color: #F75C5C;">返回</a></li>
 					
 				</ul>
