--- a/blog/my_blog/templates/send_blog.html
+++ b/blog/my_blog/templates/send_blog.html
@@ -48,33 +48,58 @@
     </div> -->
 
 
- <div class="navbar navbar-expand-lg   fixed-top navbar-light bg-light" style="height: 69.69px;">
- 	 <nav class="navbar navbar-expand-lg   fixed-top navbar-light bg-light" style="background-color: #323232;width: 61%; margin: 0 auto; ">
- 						  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
- 							<span class="navbar-toggler-icon"></span>
- 						 </button>
- 						  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
- 							<span class="navbar-toggler-icon"></span>
- 						  </button>
- 						  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
- 							<div class="navbar-nav">
-                                <a class="nav-item nav-link active" href="{% url 'core_1:index'%}"><button type="button" class="btn btn-danger" style="margin-left: 50px; width: 100px;">首页</button></a>
-
-							  {% for i in sorts%}
-								<a class="nav-item nav-link" href="#"><button type="button" class="btn btn-danger"style="margin-left: 50px; width: 100px;">{{i.sort_name}}</button></a>
-								{%empty%}
-								没有分类
-								{%endfor%}
+<div class="header-top">
+    	<div class="page-top">
+        	<div class="sl_cfrx">
+            <ul class="top-leftb">
+                <li>
+                    <a href="#" class="sl_phone">
+                        <img src="images/sl_01.png" alt=""/>
+                    </a>
+                    <a href="#" class="sl_k_h">客服热线 400-888-8888</a>
+                </li>
 
 
- 							  <a class="nav-item nav-link" href="{% url 'my_blog:my_blog' %}"><button type="button" class="btn btn-danger"style="margin-left: 50px; width: 100px;">我的</button></a>
-							  	<a href=""><h3 style="display: block;margin-left: 50px;">{{request.user.user_file.nickname}}</h3></a>
-								<a class="nav-item nav-link" href="{% url 'blog_1:user_logout'%}"><button type="button" class="btn btn-danger"style="margin-right: 50px;">退出</button></a>
- 							</div>
+            </ul>
+            </div>
+            <div class="sl_qdl">
 
- 						  </div>
- 	</nav>
- </div>
+
+								{% if username %}
+
+													<a class="sl_gk" href="{% url 'my_blog:my_blog' %}" style="color: #f75c5c;">{{request.user.user_file.nickname}}</a>
+													<a class="sl_gk" href="{% url 'blog_1:user_logout'%}" style="color: #f75c5c;">退出</a>
+
+								{%else%}
+								<a class="sl_gk" href="{% url  'blog_1:user_login' %}" style="color: #f75c5c;">登录</a>
+                				<a class="sl_gk1" href="{% url  'blog_1:register' %}" style="color:#fff;">注册</a>
+								{%endif%}
+
+            </div>
+        </div>
+    </div>
+
+ <div class="nav">
+        <div class="sl_content">
+            <img src="/static/images/z.jpg" class="zhong_mgl" alt="">
+            <div class="menu-wz">
+                <ul>
+
+					 {% for i in sorts%}
+					<li><a href="{% url 'core_1:fenlei' i.id%}">{{i.sort_name}}</a></li>
+
+					{%empty%}
+					没有分类
+					{%endfor%}
+<li><a class="sl_sy current" href="{% url 'core_1:index'%}">首页</a></li>
+
+
+                </ul>
+            </div>
+        </div>
+    </div>
+
+
 
 	<div>
 		<div class="fabu" style="width: 61.8%;margin: 100px auto;">
@@ -115,27 +140,7 @@
 			</form>
 		</div>
 	</div>
-<div class="pos-f-t">
-  <div class="collapse" id="navbarToggleExternalContent">
-    <div class="bg-dark p-4">
-      <ul class="lianjie">
-      	<li><a href="">百度</a></li>
-      	
-      	<li><a href="">CSDN</a></li>
-      	
-      	<li><a href="">Github</a></li>
-      	
-      	<li><a href="">中原工软件学院</a></li>
-      	
-      </ul>
-    </div>
-  </div>
-  <nav class="navbar navbar-dark bg-dark">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-      友情链接
-    </button>
-  </nav>
-</div>
+
 
 
 
