--- a/blog/other_blog/templates/other_blog.html
+++ b/blog/other_blog/templates/other_blog.html
@@ -128,7 +128,7 @@
 			
 			<div class="cen_1_1">
 				{% for i in art %}
-				<div class="blogbody">
+					<div class="blogbody">
 						<div class="card-header">
 							<ul >
 								<li style="width: 50%;height: 40px;font-family:宋体; margin: 0 auto;   font-size:25px; "><i class="fa fa-book fa-lg"></i>:<a href="" style="color: black">{{i.article_name}}</a></li>
@@ -140,10 +140,6 @@
 											&nbsp<i class="fa fa-eye fa-lg"></i>：<span>{{i.article_click_volume}}</span>&nbsp
 											&nbsp<i class="fa fa-window-restore fa-lg"></i>：<a href="">{{i.article_category.sort_name}}</a>&nbsp
 											&nbsp<i class="fa fa-envelope-o">{{i.article_num}}</i>：评论 &nbsp
-
-											&nbsp<i class="fa fa-trash"></i>：<a href="{% url 'my_blog:del_blog' i.id%}">删除</a>&nbsp
-
-
 										</li>
 
 
@@ -159,6 +155,12 @@
 									<ul class="blog">
 
 										<li style="float: right"><i class="fa fa-sign-out"><a href="{% url 'comment_user:comment_user' i.id%}" >查看详情</a></i></li>
+										{% if i.article_name in article_list%}
+
+										<li><i class="fa fa-star">已收藏</i></li>
+										{% else %}
+										<li ><i class="fa fa-star-o"><a href="{% url 'core_1:coll_blog' i.id%}" >未收藏</a></i></li>
+										{%endif%}
 									</ul>
 									{%else%}
 									<p class="card-text" style="font-family: 宋体;font-size: 20px;"><span style="color: black">{{i.article_text|slice:"5:50"}} ......</span>
@@ -166,9 +168,17 @@
 									<ul class="blog">
 
 										<li style="float: right"><i class="fa fa-sign-out"><a href="{% url 'comment_user:comment_user' i.id%}" >查看详情</a></i></li>
+										{% if i.article_name in article_list%}
+
+										<li><i class="fa fa-star">已收藏</i></li>
+										{% else %}
+										<li ><i class="fa fa-star-o"><a href="{% url 'core_1:coll_blog' i.id%}" >未收藏</a></i></li>
+										{%endif%}
 									</ul>
 									{%endif%}
 					 </div>
+
+
 
 				{%empty%}
 				<h1>没有文章</h1>
@@ -202,19 +212,15 @@
 							<li class="list-group-item"><i class="fa fa-life-saver"></i><span>电话：{{user_file.pthone}}</span></li>
 
 							<li class="list-group-item"><i class="fa fa-fighter-jet"></i><span>博文：{{num}}-piece</span></li>
-							  <li class="list-group-item"><i class="fa fa-fighter-jet"><a href="{% url 'my_blog:my_blogcoll'%}">收藏</a></i><span>：{{article_list}}-piece</span></li>
 							
 						  </ul>
-						  <div class="shezhi">
-							  <a href="{% url 'my_blog:xiugai_user'%}">基本信息修改<i class="fa fa-cog fa-2x"></i></a>
-							  <a href="{% url 'blog_1:update_pwd'%}">密码修改<i class="fa fa-cog fa-2x"></i></a>
-							  
-						  </div>
+
 						</div>
 						
 					</div>
 				</div>
 				
+
 
 
 
