--- a/blog/static/css/index.css
+++ b/blog/static/css/index.css
@@ -10,7 +10,7 @@ a:active {color :#666;  text-decoration:none; font-weight:normal; }
 .page-top{ width:1100px; margin:0 auto;}
 .sl_phone{  line-height: 52px;float:left;height: 40px;}
 .sl_k_h{float: left;font-size: 15px;margin-left: 11px;}
-.sl_qdl{width:160px;height: 26px;margin: 0 auto;}
+.sl_qdl{width:160px;height: 26px;float: right;margin-top:10px; }
 .top-leftb li a{color: #b4b5ba;}
 
 .sl_gk{width:78px;height: 24px;border: 1px solid #f75c5c;display: block;line-height: 24px;text-align: center;float: left;}
@@ -22,14 +22,14 @@ a:active {color :#666;  text-decoration:none; font-weight:normal; }
 /* nav */
 .nav{background: #fff;border-bottom: 1px solid #e5e5e5;}
 .rh-bj{ background:#fff; margin-top:20px !important; height:270px; margin-bottom:20px !important;}
-.sl_content{width: 1320px;margin: 0 auto; clear:both; }
-
-./* menu-wz{/* width: 660px */; height:100px; float:left;} */
-.menu-wz ul{ margin:0px; padding:0px;}
-.menu-wz ul li{ list-style-type:none; float:; font-size:18px; padding-top:34px; color:#666666; line-height:30px; width:110px; height: 50px;text-align:center;background: #FFFFFFl;}
+.sl_content{margin: 0 auto; clear:both;width: 70%;}
+.zhong_mgl{display: block;float: left;}
+.menu-wz{ width: 660px ; height:100px; float: left;margin-left:177px;}
+.menu-wz ul{ margin:0 auto; padding:0px;}
+.menu-wz ul li{ list-style-type:none; float:right; font-size:18px; padding-top:34px; color:#666666; line-height:30px; width:110px; height: 50px;text-align:center;}
 .menu-wz ul li a:hover{ border-bottom:3px solid #e7141a;display:inline-block; height:40px; color:#e7141a;font-size: 18px;}
 .menu-wz ul li a{font-size: 18px;}
-.menu-wz ul li .current{border-bottom:3px solid #e7141a;display:inline-block; height:40px; color:#e7141a;font-size: 18px;}
+.menu-wz ul li .current{display:inline-block; height:40px; font-size: 18px;}
 .top-leftb{ float:left;}
 
 /* banner */
@@ -445,26 +445,26 @@ a:active {color :#666;  text-decoration:none; font-weight:normal; }
 			
 		}
 		.cen_1{
-			width: 80%;
+			width: 64%;
 			/* float: left; */
 			border-right:1px solid #CFCFCF;
 		}
 		.cen_1_1{
-			width: 61.8%;
+			width:88%;
 			margin:0 auto;
 			margin-top:20px ;
-			background: #FFFFFF;
+
 			
 		}
 		
 		.cen_2{
-			width: 20%;
+			width: 19%;
 			
 		
 			position:absolute;
-			top:0;
-			right: 0;
-			border-left:80px solid #f9f9f9 ;
+			top:18px;
+			right: 323px;
+			border-left:10px solid #f9f9f9 ;
 		}
 		
 		
@@ -475,7 +475,8 @@ a:active {color :#666;  text-decoration:none; font-weight:normal; }
 }
 	.blog{
 		width: 100%;
-		height: 30px;
+		height: 40px;
+
 	}
 	.blog li{
 		
@@ -484,10 +485,13 @@ a:active {color :#666;  text-decoration:none; font-weight:normal; }
 		
 	}
 	.blogbody{
-		width: 100px%;
-		margin: 20px;
-		border: #DCDCDC 1px solid;
-		background: #FFE7E1;
+		width: 68%;
+		margin: 20px auto;
+
+		background: #ffe1e11a;
+	}
+	.blogbody img{
+		margin: 10px auto;
 	}
 	.sl_footer{width: 100%;background: #323232;}
 	.sl_footer p button{
@@ -496,10 +500,10 @@ a:active {color :#666;  text-decoration:none; font-weight:normal; }
 		
 		margin: 0 auto;
 	}
-	.card{background-color: #323232;}
+	.card{background-color: #ece7e7;}
 	.list-group-item.active{
-		background-color: #F75C5C;
-		border-color: #F75C5C;
+		background-color: rgba(0,0,0,.03);
+
 	}
 	.cen_2_2 i{
 		float: right;
